--- a/system/public/mediapipe-hands.html
+++ b/system/public/mediapipe-hands.html
@@ -1,26 +1,25 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
   <script
-    src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"
+    src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils@0.3/camera_utils.js"
     crossorigin="anonymous"></script>
   <script
-    src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js"
+    src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils@0.6/control_utils.js"
     crossorigin="anonymous"></script>
   <script
-    src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"
+    src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils@0.3/drawing_utils.js"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4/hands.js"
     crossorigin="anonymous"></script>
 </head>
+
 
 <body>
   <div class="container">
     <video class="input_video"></video>
     <canvas class="output_canvas" width="1280px" height="720px"></canvas>
   </div>
-
 
   <script type="module">
     const videoElement = document.getElementsByClassName('input_video')[0];
@@ -41,8 +40,6 @@
       }
       canvasCtx.restore();
     }
-
-    console.log(VERSION);
 
     const hands = new Hands({
       locateFile: (file) => {
@@ -67,12 +64,6 @@
     });
     camera.start();
   </script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands_solution_packed_assets_loader.js"
-    crossorigin="anonymous"></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands_solution_simd_wasm_bin.js"
-    crossorigin="anonymous"></script>
 </body>
 
 </html>
