--- a/system/public/mediapipe.html
+++ b/system/public/mediapipe.html
@@ -1,3 +1,6 @@
+<!-- This file implements @mediapipe hand tracking, and is used
+     for isolated testing purposes. It's functionality is currently
+     integrated into `bios.mjs` 23.04.29.20.54 -->
 <!DOCTYPE html>
 <html lang="en">
 
