--- a/system/public/sandboxed-iframe-mockup.html
+++ b/system/public/sandboxed-iframe-mockup.html
@@ -30,7 +30,7 @@
 <body>
   <iframe
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-    sandbox="allow-scripts" src="https://localhost:8888/ff~0~5"
+    sandbox="allow-scripts" src="https://localhost:8888/hell_-world~10"
     frameborder="0"></iframe>
 </body>
 
