add support for full account deletion by entering `delete-erase-and-forget-me` (apple compliance)

--- a/system/public/privacy-policy.html
+++ b/system/public/privacy-policy.html
@@ -44,10 +44,13 @@
     parties, and does not store user data for algorithmic training.
   </p>
   <p>
+    Delete your Aesthetic Computer account by entering <code>delete-erase-and-forget-me</code> in the prompt.
+  </p>
+  <p>
     For more information enter <code>help</code> to communicate
     with the author.
   </p>
-  <img width="128" src="https://pals-aesthetic-computer.sfo3.cdn.digitaloceanspaces.com/painting-2023.8.21.10.19.png">
+  <a href="/"><img width="128" src="https://pals-aesthetic-computer.sfo3.cdn.digitaloceanspaces.com/painting-2023.8.21.10.19.png"></a>
   <br>
   <br>
   <sub>Edited on December 12, 2023</sub>
