--- a/digitpain.com/index.html
+++ b/digitpain.com/index.html
@@ -16,7 +16,7 @@
   <div id="wrapper">
     <center>
       <h1 style="margin-bottom: -0em; padding-top: 0.25em;">
-        <mark>@digitpain</mark> <span style="opacity: 0.5;">is the portfolio of&hellip;</span>
+        <mark>digitpain.com</mark> <span style="opacity: 0.5;">is the portfolio of&hellip;</span>
         <br>
         <img style="padding-top: 0.7em; padding-bottom: 0.3em; width:100%; max-width: 380px;" src="digitpain.jpg">
         <br>
