more work on `docs` system / add command

--- a/digitpain.com/index.html
+++ b/digitpain.com/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Jeffrey Alan Scudder · @digitpain</title>
+  <title>Jeffrey Alan Scudder · @whistlegraph</title>
   <meta charset="utf-8">
   <meta name="author" content="Jeffrey Alan Scudder">
   <meta name="description" content="The portfolio of Jeffrey Alan Scudder.">
